--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Produtos - Barbearia Alura</title>
+<title>Livros</title>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="produtos.html">Produtos</a></li>
+<li><a href="produtos.html">Livros</a></li>
 <li><a href="contato.html">Contato</a></li>
 </ul>
 </nav>
